--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "make": "yarn run download && electron-forge make",
     "publish": "yarn run download && electron-forge publish",
     "lint": "eslint --ext .ts,.tsx src",
+    "lint:compiler": "eslint -c .eslintrc.react-compiler.json --ext .ts,.tsx src",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
@@ -54,12 +55,14 @@
     "@typescript-eslint/parser": "^7.11.0",
     "@vitest/ui": "^4.0.15",
     "autoprefixer": "^10.4.17",
+    "babel-plugin-react-compiler": "^1.0.0",
     "electron": "39.2.7",
     "eslint": "^8.0.1",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react-compiler": "^19.1.0-rc.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "jsdom": "^27.3.0",
     "postcss": "^8.4.33",
