--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "jsdom": "^27.3.0",
     "postcss": "^8.4.33",
+    "shadcn": "^3.7.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
