--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,84 +19,169 @@ jobs:
     steps:
       - name: Github checkout
         uses: actions/checkout@v4
-      - name: Build whisper.cpp CLI (macOS only)
-        if: startsWith(matrix.os.name, 'macos')
+      - name: Build whisper.cpp CLI (all platforms)
+        shell: bash
         run: |
           set -euo pipefail
+
           ARCH_DIR="x64"
-          CMAKE_ARCH="x86_64"
-          if [[ "${{ matrix.os.name }}" == "macos-arm64" ]]; then
-            ARCH_DIR="arm64"
-            CMAKE_ARCH="arm64"
+          PLATFORM_DIR="linux"
+          CMAKE_ARCH=""
+          if [[ "${{ matrix.os.name }}" == "windows" ]]; then
+            PLATFORM_DIR="win32"
+          elif [[ "${{ matrix.os.name }}" == "linux" ]]; then
+            PLATFORM_DIR="linux"
+          else
+            PLATFORM_DIR="darwin"
+            CMAKE_ARCH="x86_64"
+            if [[ "${{ matrix.os.name }}" == "macos-arm64" ]]; then
+              ARCH_DIR="arm64"
+              CMAKE_ARCH="arm64"
+            fi
           fi
 
           WORK_DIR="$(mktemp -d)"
           git clone --depth 1 https://github.com/ggml-org/whisper.cpp.git "$WORK_DIR/whisper.cpp"
           cd "$WORK_DIR/whisper.cpp"
-          cmake -B build \
-            -DWHISPER_BUILD_EXAMPLES=ON \
-            -DWHISPER_BUILD_TESTS=OFF \
-            -DWHISPER_BUILD_SERVER=OFF \
-            -DWHISPER_SDL2=OFF \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_OSX_ARCHITECTURES="${CMAKE_ARCH}"
-          cmake --build build --config Release -j "$(sysctl -n hw.logicalcpu)"
 
-          WHISPER_BIN="$(find build -type f -name 'whisper-cli' | head -n 1)"
+          if [[ "${{ matrix.os.name }}" == "windows" ]]; then
+            cmake -S . -B build -A x64 \
+              -DWHISPER_BUILD_EXAMPLES=ON \
+              -DWHISPER_BUILD_TESTS=OFF \
+              -DWHISPER_BUILD_SERVER=OFF \
+              -DWHISPER_SDL2=OFF \
+              -DCMAKE_BUILD_TYPE=Release
+            cmake --build build --config Release -j "${NUMBER_OF_PROCESSORS:-4}"
+          elif [[ "${{ matrix.os.name }}" == "linux" ]]; then
+            cmake -S . -B build \
+              -DWHISPER_BUILD_EXAMPLES=ON \
+              -DWHISPER_BUILD_TESTS=OFF \
+              -DWHISPER_BUILD_SERVER=OFF \
+              -DWHISPER_SDL2=OFF \
+              -DCMAKE_BUILD_TYPE=Release
+            cmake --build build --config Release -j "$(nproc)"
+          else
+            cmake -S . -B build \
+              -DWHISPER_BUILD_EXAMPLES=ON \
+              -DWHISPER_BUILD_TESTS=OFF \
+              -DWHISPER_BUILD_SERVER=OFF \
+              -DWHISPER_SDL2=OFF \
+              -DCMAKE_BUILD_TYPE=Release \
+              -DCMAKE_OSX_ARCHITECTURES="${CMAKE_ARCH}"
+            cmake --build build --config Release -j "$(sysctl -n hw.logicalcpu)"
+          fi
+
+          WHISPER_BIN="$(find build -type f \( -name 'whisper-cli' -o -name 'whisper-cli.exe' \) | head -n 1)"
           if [[ -z "${WHISPER_BIN}" ]]; then
             echo "whisper-cli not found in build output" >&2
             exit 1
           fi
 
-          METAL_FILE="$(find build -type f -name 'ggml-metal.metal' | head -n 1 || true)"
-          WHISPER_LIBS="$(find build -type f \( -name 'libwhisper*.dylib' -o -name 'libggml*.dylib' \) || true)"
+          if ! "${WHISPER_BIN}" --help | grep -q -- '--vad'; then
+            echo "whisper-cli does not report VAD flags; build likely missing VAD support" >&2
+            exit 1
+          fi
 
-          DEST="${GITHUB_WORKSPACE}/lib/whisper.cpp/${ARCH_DIR}/darwin"
+          DEST="${GITHUB_WORKSPACE}/lib/whisper.cpp/${ARCH_DIR}/${PLATFORM_DIR}"
           mkdir -p "${DEST}"
-          cp "${WHISPER_BIN}" "${DEST}/whisper-cli"
-          chmod +x "${DEST}/whisper-cli"
-          if [[ -n "${METAL_FILE}" ]]; then
-            cp "${METAL_FILE}" "${DEST}/ggml-metal.metal"
+          EXE_NAME="whisper-cli"
+          if [[ "${PLATFORM_DIR}" == "win32" ]]; then
+            EXE_NAME="whisper-cli.exe"
           fi
-          if [[ -n "${WHISPER_LIBS}" ]]; then
-            while IFS= read -r dylib; do
-              [[ -z "${dylib}" ]] && continue
-              cp "${dylib}" "${DEST}/"
-            done <<< "${WHISPER_LIBS}"
-          fi
-          # Ensure rpath short-name dylibs exist (e.g., libwhisper.1.dylib).
-          pushd "${DEST}" >/dev/null
-          for f in lib*.dylib; do
-            if [[ "${f}" =~ ^(lib[^.]+)\.([0-9]+)\..*\.dylib$ ]]; then
-              short="${BASH_REMATCH[1]}.${BASH_REMATCH[2]}.dylib"
-              ln -sf "${f}" "${short}"
+          cp "${WHISPER_BIN}" "${DEST}/${EXE_NAME}"
+          chmod +x "${DEST}/${EXE_NAME}" || true
+
+          if [[ "${PLATFORM_DIR}" == "darwin" ]]; then
+            METAL_FILE="$(find build -type f -name 'ggml-metal.metal' | head -n 1 || true)"
+            if [[ -n "${METAL_FILE}" ]]; then
+              cp "${METAL_FILE}" "${DEST}/ggml-metal.metal"
             fi
-          done
-          # Fix LC_RPATH so dyld resolves libs from the bundled directory.
-          for bin in whisper-cli lib*.dylib; do
-            [[ -f "${bin}" ]] || continue
-            install_name_tool -add_rpath "@loader_path" "${bin}" || true
-            rpaths=$(otool -l "${bin}" | awk '/cmd LC_RPATH/{getline; getline; print $2}')
-            while IFS= read -r rp; do
-              [[ -z "${rp}" ]] && continue
-              if [[ "${rp}" == /var/folders/* || "${rp}" == /tmp/* ]]; then
-                install_name_tool -delete_rpath "${rp}" "${bin}" || true
+            WHISPER_LIBS="$(find build -type f \( -name 'libwhisper*.dylib' -o -name 'libggml*.dylib' \) || true)"
+            if [[ -n "${WHISPER_LIBS}" ]]; then
+              while IFS= read -r dylib; do
+                [[ -z "${dylib}" ]] && continue
+                cp "${dylib}" "${DEST}/"
+              done <<< "${WHISPER_LIBS}"
+            fi
+            # Ensure rpath short-name dylibs exist (e.g., libwhisper.1.dylib).
+            pushd "${DEST}" >/dev/null
+            for f in lib*.dylib; do
+              if [[ "${f}" =~ ^(lib[^.]+)\.([0-9]+)\..*\.dylib$ ]]; then
+                short="${BASH_REMATCH[1]}.${BASH_REMATCH[2]}.dylib"
+                ln -sf "${f}" "${short}"
               fi
-            done <<< "${rpaths}"
-          done
-          popd >/dev/null
+            done
+            # Fix LC_RPATH so dyld resolves libs from the bundled directory.
+            for bin in whisper-cli lib*.dylib; do
+              [[ -f "${bin}" ]] || continue
+              install_name_tool -add_rpath "@loader_path" "${bin}" || true
+              rpaths=$(otool -l "${bin}" | awk '/cmd LC_RPATH/{getline; getline; print $2}')
+              while IFS= read -r rp; do
+                [[ -z "${rp}" ]] && continue
+                if [[ "${rp}" == /var/folders/* || "${rp}" == /tmp/* ]]; then
+                  install_name_tool -delete_rpath "${rp}" "${bin}" || true
+                fi
+              done <<< "${rpaths}"
+            done
+            popd >/dev/null
+          elif [[ "${PLATFORM_DIR}" == "linux" ]]; then
+            WHISPER_LIBS="$(find build -type f \( -name 'libwhisper*.so*' -o -name 'libggml*.so*' \) || true)"
+            if [[ -n "${WHISPER_LIBS}" ]]; then
+              while IFS= read -r sofile; do
+                [[ -z "${sofile}" ]] && continue
+                cp "${sofile}" "${DEST}/"
+              done <<< "${WHISPER_LIBS}"
+            fi
+          else
+            WHISPER_DLLS="$(find build -type f -name '*.dll' || true)"
+            if [[ -n "${WHISPER_DLLS}" ]]; then
+              while IFS= read -r dll; do
+                [[ -z "${dll}" ]] && continue
+                cp "${dll}" "${DEST}/"
+              done <<< "${WHISPER_DLLS}"
+            fi
+          fi
+
           ls -la "${DEST}"
-      - name: Pack whisper.cpp (macOS arm64 only)
-        if: matrix.os.name == 'macos-arm64'
+      - name: Pack whisper.cpp
+        shell: bash
         run: |
           set -euo pipefail
-          DEST="${GITHUB_WORKSPACE}/lib/whisper.cpp/arm64/darwin"
-          ARCHIVE="${GITHUB_WORKSPACE}/whisper.cpp-macos-arm64.tar.gz"
+
+          ARCH_DIR="x64"
+          PLATFORM_DIR="linux"
+          PLATFORM_KEY="linux"
+          if [[ "${{ matrix.os.name }}" == "windows" ]]; then
+            PLATFORM_DIR="win32"
+            PLATFORM_KEY="windows"
+          elif [[ "${{ matrix.os.name }}" == "linux" ]]; then
+            PLATFORM_DIR="linux"
+            PLATFORM_KEY="linux"
+          else
+            PLATFORM_DIR="darwin"
+            PLATFORM_KEY="macos"
+            if [[ "${{ matrix.os.name }}" == "macos-arm64" ]]; then
+              ARCH_DIR="arm64"
+            fi
+          fi
+
+          DEST="${GITHUB_WORKSPACE}/lib/whisper.cpp/${ARCH_DIR}/${PLATFORM_DIR}"
           if [[ ! -d "${DEST}" ]]; then
             echo "whisper.cpp output not found at ${DEST}" >&2
             exit 1
           fi
-          tar -czf "${ARCHIVE}" -C "${GITHUB_WORKSPACE}/lib" "whisper.cpp/arm64/darwin"
+
+          if [[ "${PLATFORM_DIR}" == "win32" ]]; then
+            ARCHIVE="${GITHUB_WORKSPACE}/whisper.cpp-${PLATFORM_KEY}-${ARCH_DIR}.zip"
+            if command -v pwsh >/dev/null 2>&1; then
+              pwsh -NoProfile -Command "Compress-Archive -Force -Path '${DEST}' -DestinationPath '${ARCHIVE}'"
+            else
+              powershell -NoProfile -Command "Compress-Archive -Force -Path '${DEST}' -DestinationPath '${ARCHIVE}'"
+            fi
+          else
+            ARCHIVE="${GITHUB_WORKSPACE}/whisper.cpp-${PLATFORM_KEY}-${ARCH_DIR}.tar.gz"
+            tar -czf "${ARCHIVE}" -C "${GITHUB_WORKSPACE}/lib" "whisper.cpp/${ARCH_DIR}/${PLATFORM_DIR}"
+          fi
           ls -la "${ARCHIVE}"
       - name: Use Node.js
         uses: actions/setup-node@v4
@@ -113,17 +198,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm run publish
-      - name: Upload whisper.cpp to Release (macOS arm64 only)
-        if: matrix.os.name == 'macos-arm64'
+      - name: Upload whisper.cpp to Release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -euo pipefail
           VERSION="$(node -p "require('./package.json').version")"
           TAG="v${VERSION}"
-          ARCHIVE="${GITHUB_WORKSPACE}/whisper.cpp-macos-arm64.tar.gz"
-          if [[ ! -f "${ARCHIVE}" ]]; then
-            echo "whisper.cpp archive not found at ${ARCHIVE}" >&2
+          ARCHIVE="$(ls -1 ${GITHUB_WORKSPACE}/whisper.cpp-* | head -n 1)"
+          if [[ -z "${ARCHIVE}" || ! -f "${ARCHIVE}" ]]; then
+            echo "whisper.cpp archive not found in workspace" >&2
             exit 1
           fi
           gh release upload "${TAG}" "${ARCHIVE}" --clobber
