--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,7 +77,7 @@ jobs:
             exit 1
           fi
 
-          if ! "${WHISPER_BIN}" --help | grep -q -- '--vad'; then
+          if ! "${WHISPER_BIN}" --help 2>&1 | tr -d '\r' | grep -qi -- 'vad'; then
             echo "whisper-cli does not report VAD flags; build likely missing VAD support" >&2
             exit 1
           fi
