--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "compare-versions": "^6.1.0",
     "compromise": "^14.12.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "drizzle-kit": "^0.26.2",
     "drizzle-orm": "^0.35.2",
     "electron-log": "^5.2.0",
