--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "iconv-lite": "^0.6.3",
     "input-otp": "^1.4.2",
     "inversify": "^6.0.2",
+    "i18next": "^23.11.5",
     "jschardet": "^3.1.2",
     "leven": "^3.1.0",
     "lodash": "^4.17.21",
@@ -157,6 +158,7 @@
     "react-hot-toast": "^2.4.1",
     "react-hotkeys-hook": "^4.5.0",
     "react-icons": "^4.12.0",
+    "react-i18next": "^14.1.3",
     "react-markdown": "^9.0.1",
     "react-player": "^2.14.1",
     "react-resizable-panels": "^3.0.6",
