--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,14 @@ DP_LOG_LEVEL=debug
 # Log level for renderer (Vite-injected)
 VITE_DP_LOG_LEVEL=debug
 
-# Optional log tag filter (comma-separated; use * or all to disable filtering)
-DP_LOG_TAGS=subtitle,whisper
+# Optional main-process module filter allowlist/denylist
+DP_LOG_INCLUDE_MODULES=
+DP_LOG_EXCLUDE_MODULES=
+
+# Optional focus token filter for temporary AI debugging logs
+DP_LOG_FOCUS_TOKEN=
+
+# Optional renderer-side filters (Vite-injected)
+VITE_DP_LOG_INCLUDE_MODULES=
+VITE_DP_LOG_EXCLUDE_MODULES=
+VITE_DP_LOG_FOCUS_TOKEN=
