--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "framer-motion": "^10.16.16",
     "hi-base32": "^0.5.1",
     "iconv-lite": "^0.6.3",
+    "i18next": "^23.16.8",
     "input-otp": "^1.4.2",
     "inversify": "^6.0.2",
     "jschardet": "^3.1.2",
@@ -156,6 +157,7 @@
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.4.1",
     "react-hotkeys-hook": "^4.5.0",
+    "react-i18next": "^14.1.3",
     "react-icons": "^4.12.0",
     "react-markdown": "^9.0.1",
     "react-player": "^2.14.1",
