--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "@types/xlsx": "^0.0.36",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
-    "@vitest/ui": "^4.0.15",
+    "@vitest/coverage-v8": "^4.0.18",
+    "@vitest/ui": "^4.0.18",
     "autoprefixer": "^10.4.17",
     "babel-plugin-react-compiler": "^1.0.0",
     "electron": "39.2.7",
@@ -76,7 +77,7 @@
     "typescript": "^5.9.3",
     "vite": "^7.2.7",
     "vite-plugin-wasm": "^3.5.0",
-    "vitest": "^4.0.15"
+    "vitest": "^4.0.18"
   },
   "dependencies": {
     "@ai-sdk/openai": "^3.0.23",
@@ -137,8 +138,8 @@
     "fluent-ffmpeg": "^2.1.2",
     "framer-motion": "^10.16.16",
     "hi-base32": "^0.5.1",
-    "iconv-lite": "^0.6.3",
     "i18next": "^23.16.8",
+    "iconv-lite": "^0.6.3",
     "input-otp": "^1.4.2",
     "inversify": "^6.0.2",
     "jschardet": "^3.1.2",
